--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.1</version> <!-- ✅ CORREGIDO: de 4.0.0 a 3.4.1 -->
+		<version>3.4.1</version>
 		<relativePath/>
 	</parent>
 
@@ -18,14 +18,14 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<spring-cloud.version>2024.0.0</spring-cloud.version> <!-- ✅ CORREGIDO: de 2025.0.0 a 2024.0.0 -->
+		<spring-cloud.version>2024.0.0</spring-cloud.version>
 	</properties>
 
 	<dependencies>
 		<!-- Spring Boot Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId> <!-- ✅ CORREGIDO: de webmvc a web -->
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<!-- Spring Boot Data JPA -->
@@ -70,13 +70,13 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
 			<version>0.11.5</version>
-			<scope>runtime</scope> <!-- ✅ Agregado scope -->
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
-			<scope>runtime</scope> <!-- ✅ Agregado scope -->
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- OkHttp (para llamadas a APIs externas) -->
@@ -89,7 +89,7 @@
 		<!-- Jackson para manejo de JSON (incluyendo LocalDate/LocalDateTime) -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jsr310</artifactId> <!-- ✅ AGREGADO: necesario para ObjectMapper -->
+			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
 
 		<!-- OpenAPI (Swagger) -->
@@ -108,14 +108,14 @@
 		<!-- Spring Boot Test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId> <!-- ✅ CORREGIDO: reemplaza data-jpa-test y webmvc-test -->
+			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 
 		<!-- Spring Security Test -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId> <!-- ✅ AGREGADO: para testing de seguridad -->
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -159,6 +159,12 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>
 	</build>
 
 </project>
